# wayyDB

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: build-push.yml  ci.yml  publish.yml
api/: kvstore.py  main.py  pubsub.py  requirements.txt  streaming.py
benchmarks/: RESULTS.md  __init__.py  __main__.py  bench_api.py  benchmark.py  results.json
doc/: 01_Performance_Optimization_Strategy.md  02_Python_Scripting_API.md  03_Redis_Integration_Architecture.md
docs/: CNAME  index.html
docs/blog/: why-cpp20.md
docs/producthunt/: first_comment_reply.md
include/wayy_db/: column.hpp  column_view.hpp  database.hpp  hash_index.hpp  mmap_file.hpp  string_column.hpp  table.hpp  types.hpp  wal.hpp  wayy_db.hpp
include/wayy_db/ops/: aggregations.hpp  joins.hpp  window.hpp
python/: bindings.cpp
python/wayy_db/: __init__.py  _core.pyi
python/wayy_db/cli/: __init__.py  client.py  config.py  deploy.py  main.py  output.py
site/badges/: README.md
site/producthunt/: description.md  maker_comment.md  tagline.txt
src/: column.cpp  database.cpp  hash_index.cpp  mmap_file.cpp  string_column.cpp  table.cpp  types.cpp  wal.cpp
src/ops/: aggregations.cpp  joins.cpp  window.cpp
tests/: test_column.cpp  test_joins.cpp  test_mmap.cpp  test_table.cpp  test_types.cpp
tests/python/: conftest.py  test_api.py  test_basic.py  test_pubsub.py  test_streaming.py
